# Query_Agent

./: README.md  pyproject.toml
knowledge/: ingest_policies.py
knowledge/vectorstore/: chroma.sqlite3
src/agents_queries/: crew.py  main.py
src/agents_queries/config/: agents.yaml  tasks.yaml
src/agents_queries/tools/: __init__.py  custom_tool.py
