[project]
name = "agents_queries"
version = "0.1.0"
description = "agents_queries using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2",
    "langchain==0.1.20",
    "langchain-community==0.0.38",
    "langchain-openai==0.0.8",
    "pypdf>=6.6.0",
]

[project.scripts]
agents_queries = "agents_queries.main:run"
run_crew = "agents_queries.main:run"
train = "agents_queries.main:train"
replay = "agents_queries.main:replay"
test = "agents_queries.main:test"
run_with_trigger = "agents_queries.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
